# jaxrl

./: .gitignore  LICENSE  README.md  beautify.sh  environment.yml  main.py  pyproject.toml  replay_buffer.py  requirements.txt  rl_types.py  sac.py  setup.py  train.py  train_finetuning.py  train_offline.py  train_pixels.py  wrappers.py
configs/: awac_default.py  bc_default.py  default.py  drq_default.py  hard_update.py  sac_v1_default.py
examples/: README.md  benchmark.py  benchmark.sh  train.py  train_finetuning.py  train_her.py  train_offline.py  train_pixels.py
examples/configs/: bc_default.py  ddpg_default.py  drq_default.py  drq_faster.py  redq_default.py  sac_default.py
examples/experimental/: train_vectorized.py
examples/experimental/configs/: sac_default.py
jax_rl/: replay_buffer.py  utils.py
jax_rl/agents/: __init__.py  actor_critic_temp.py
jax_rl/agents/awac/: actor.py  awac_learner.py  value.py
jax_rl/agents/bc/: actor.py  bc_learner.py
jax_rl/agents/drq/: drq_learner.py  networks.py
jax_rl/agents/sac/: actor.py  critic.py  sac_learner.py  temperature.py
jax_rl/agents/sac_v1/: critic.py  (+1 more)
jax_rl/datasets/: __init__.py  awac_dataset.py  d4rl_dataset.py  dataset_utils.py  replay_buffer.py
jax_rl/networks/: autoregressive_policy.py  common.py  critic_net.py  policies.py  policy.py
jax_rl/wrappers/: __init__.py  common.py  dmc_env.py  episode_monitor.py  frame_stack.py  repeat_action.py  single_precision.py  video_recorder.py
jaxrl/: evaluation.py  utils.py
jaxrl/agents/: __init__.py
jaxrl/datasets/: __init__.py  awac_dataset.py  d4rl_dataset.py  dataset.py  dataset_utils.py  replay_buffer.py  rl_unplugged_dataset.py
jaxrl/networks/: autoregressive_policy.py  common.py  critic_net.py  policies.py
jaxrl/wrappers/: __init__.py  absorbing_states.py  dmc_env.py  episode_monitor.py  frame_stack.py  repeat_action.py  rgb2gray.py  single_precision.py  sticky_actions.py  take_key.py  video_recorder.py
learning_curves/: plot.ipynb
logs/: parse.ipynb
notebooks/: test_made.ipynb
remote/: Dockerfile  run_on_azure.py
(+223 files in other folders)
