[tool.poetry]
name = "jaxrl"
version = "0.0.7"
description = "Implementations of Reinforcement Learning algorithms in Jax."
authors = ["Ilya Kostrikov <ikostrikov@gmail.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["reinforcement", "machine", "learning", "research"]
license="MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.3"
scipy = "^1.8.0"
absl-py = "^1.0.0"
gym = "^0.23.1"
gdown = "^4.4.0"
tqdm = "^4.64.0"
flax = "^0.4.2"
jax = "^0.3.10"
ml-collections = "^0.1.1"
optax = "^0.1.2"
tensorboardX = "^2.5"
tensorflow-probability = "^0.16.0"
imageio = "^2.19.1"
imageio-ffmpeg = "^0.4.7"
mujoco-py = "^2.1.2"
d4rl = {git = "https://github.com/ikostrikov/d4rl.git"}
dm-control = "^1.0.2"
wandb = "^0.12.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
